todo-list and todo-item read/edit mode

--- a/src/app/todos/todo-list/todo-list.component.html
+++ b/src/app/todos/todo-list/todo-list.component.html
@@ -1,1 +1,5 @@
-<p>todo-list works!</p>
+<div class="row">
+  <div class="col">
+    <app-todo-list-item [todo]="todo" *ngFor ="let todo of todos"></app-todo-list-item>
+  </div>
+</div>
