--- a/src/app/todos/todo-list-item/todo-list-item.component.html
+++ b/src/app/todos/todo-list-item/todo-list-item.component.html
@@ -1,1 +1,27 @@
-<p>todo-list-item works!</p>
+<!-- READ MODE -->
+<div class="container mt-2" *ngIf="isEditing">
+  <div class="row">
+    <div class="col-4">
+      <input type="text" class="form-control hidden" [formControl]="titleInput">
+    </div>
+
+    <div class="col-8">
+      <button class="btn btn-primary ml-2" type="button" (click)="submitTask()"></button>
+    </div>
+  </div>
+</div>
+
+<!-- EDIT MODE -->
+<div class="container mt-2" *ngIf="!isEditing">
+  <div class="row">
+    <div class="col-4">
+      {{todo.title}}
+    </div>
+
+    <div class="col-8">
+      <button class="btn btn-success" type="button" (click)="completeTask()">Done</button>
+      <button class="btn btn-primary ml-2" type="button" (click)="editTask()">Edit</button>
+      <button class="btn btn-danger ml-2" type="button" (click)="deleteTask()">Delete</button>
+    </div>
+  </div>
+</div>
