Complete todo functionality

--- a/src/app/todos/todo-list-item/todo-list-item.component.html
+++ b/src/app/todos/todo-list-item/todo-list-item.component.html
@@ -1,4 +1,4 @@
-<!-- READ MODE -->
+<!-- EDIT MODE -->
 <div class="container mt-2" *ngIf="isEditing">
   <div class="row">
     <div class="col-4">
@@ -6,12 +6,12 @@
     </div>
 
     <div class="col-8">
-      <button class="btn btn-primary ml-2" type="button" (click)="submitTask()"></button>
+      <button class="btn btn-primary ml-2" type="button" (click)="submitTask()">Submit</button>
     </div>
   </div>
 </div>
 
-<!-- EDIT MODE -->
+<!-- READ MODE -->
 <div class="container mt-2" *ngIf="!isEditing">
   <div class="row">
     <div class="col-4">
